🎉 Chore : CD.yml 내용 추가
CD Actions Deploy 작성

Related to : #28

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -45,3 +45,13 @@ jobs:
         run: aws s3 cp --region ap-northeast-2 ./$GITHUB_SHA.zip s3://$S3_BUCKET_NAME/$PROJECT_NAME/$GITHUB_SHA.zip
         env:
           GITHUB_SHA: ${{ github.sha }}
+      
+      - name: Deploy
+        run: |
+          aws deploy create-deployment \
+          --application-name 6four \
+          --deployment-config-name CodeDeployDefault.AllAtOnce \
+          --deployment-group-name cicd-6four \
+          --file-exists-behavior OVERWRITE \
+          --s3-location bucket=$S3_BUCKET_NAME,bundleType=zip,key=6four/$GITHUB_SHA.zip \
+          --region ap-northeast-2 \
