--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,7 +19,14 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-
+      
+      - name: Copy Test
+        env:
+          OCCUPY_TEST: ${{ secrets.OCCUPY_TEST }}
+          OCCUPY_TEST_DIR: src/main/resources
+          OCCUPY_TEST_DIR_FILE_NAME: application.yml
+        run: echo $OCCUPY_TEST | base64 --decode > $OCCUPY_TEST_DIR/$OCCUPY_TEST_DIR_FILE_NAME
+      
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
 
