--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -9,7 +9,7 @@ env:
 jobs:
   build:
     name: CD
-    runs-on: amazon-linux-2
+    runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
