--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,6 +22,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
+          distribution: 'corretto'
+          java-package: 'jdk'
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
