🎨 Fix : CD.yml jdk 수정
jdk에서 오류가나서 수정

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -19,6 +19,8 @@ jobs:
         uses: actions/setup-java@v2
         with:
           java-version: '17'
+          distribution: 'corretto'
+          java-package: 'jdk'
       
       - name: Copy Test
         env:
