--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -14,13 +14,13 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
-
+    
       - name: Set up JDK 17
         uses: actions/setup-java@v2
         with:
           java-version: '17'
-          distribution: 'corretto'
-          java-package: 'jdk'
+          distribution: 'zulu'
+
       
       - name: Copy Test
         env:
