🎨 Fix : CD.yml 파일경로 수정
./gradlew를 찾지 못하여 경로 수정

Related to : #28

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,6 +27,7 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
+        working-directory: ./BE/src
       
       - name: Build with Gradle
         run: ./gradlew build
