🎨 Fix : CD.yml 파일경로 수정
./gradlew를 인식못하여 경로 지정

Related to : #28

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -31,9 +31,11 @@ jobs:
       
       - name: Grant execute permission for gradlew
         run: chmod +x ./gradlew
+        working-directory: ./BE/src
 
       - name: Build with Gradle
         run: ./gradlew build
+        working-directory: ./BE/src
 
       - name: Make zip file
         run: zip -r ./$GITHUB_SHA.zip .
