--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,9 +26,9 @@ jobs:
           distribution: 'zulu'
 
       - name: Grant execute permission for gradlew
-        working-directory: ./BE/src
+        working-directory: ./BE
         run: chmod +x ./gradlew
       
       - name: Build with Gradle
-        working-directory: ./BE/src
+        working-directory: ./BE
         run: ./gradlew build
