--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -30,11 +30,11 @@ jobs:
         run: echo $OCCUPY_TEST | base64 --decode > $OCCUPY_TEST_DIR/$OCCUPY_TEST_DIR_FILE_NAME
       
       - name: Grant execute permission for gradlew
-        working-directory: ./BE/src
+        working-directory: ./BE
         run: chmod +x ./gradlew
-
+      
       - name: Build with Gradle
-        working-directory: ./BE/src
+        working-directory: ./BE
         run: ./gradlew build
 
       - name: Make zip file
