--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,8 +26,7 @@ jobs:
           distribution: 'zulu'
 
       - name: Grant execute permission for gradlew
-        working-directory: ./BE
-        run: chmod +x ./gradlew
+        run: chmod +x ./BE/gradlew
       
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./BE/gradlew build
