--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -27,6 +27,8 @@ jobs:
 
       - name: Grant execute permission for gradlew
         run: chmod +x ./BE/gradlew
+        working-directory: ./BE
       
       - name: Build with Gradle
         run: ./BE/gradlew build
+        working-directory: ./BE
