🎨 Fix : CI.yml 수정

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -25,6 +25,10 @@ jobs:
           java-version: '17'
           distribution: 'zulu'
 
+      - name: Check current working directory
+        run: pwd
+
+
       - name: Grant execute permission for gradlew
         run: chmod +x ./BE/gradlew
       
