🎨 Fix : CD.yml 수정
working-directory: ./BE/를 추가하여 빌드가 수행되는 디렉토리를 지정

Related to : #28

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -34,6 +34,7 @@ jobs:
       
       - name: Build with Gradle
         run: ./BE/gradlew build
+        working-directory: ./BE/
 
       - name: Make zip file
         run: zip -r ./$GITHUB_SHA.zip .
