--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,7 +27,7 @@ jobs:
           OCCUPY_TEST: ${{ secrets.OCCUPY_TEST }}
           OCCUPY_TEST_DIR: ./BE/src/main/resources
           OCCUPY_TEST_DIR_FILE_NAME: application.yml
-        run: echo $OCCUPY_TEST | base64 --decode > $OCCUPY_TEST_DIR/$OCCUPY_TEST_DIR_FILE_NAME
+        run: echo $OCCUPY_TEST > $OCCUPY_TEST_DIR/$OCCUPY_TEST_DIR_FILE_NAME
       
       - name: Grant execute permission for gradlew
         run: chmod +x ./BE/gradlew
