--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -33,7 +33,7 @@ jobs:
         run: chmod +x ./BE/gradlew
       
       - name: Print current working directory
-        run: ls -l
+        run: ls -lR
       
       - name: Build with Gradle
         run: ./BE/gradlew build
