--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -33,7 +33,7 @@ jobs:
         run: chmod +x ./BE/gradlew
       
       - name: Build with Gradle
-        run: ./BE/gradlew build
+        run: ./gradlew build
         working-directory: ./BE/
 
       - name: Make zip file
