--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -49,7 +49,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ secrets.AWS_REGION }}
+          # aws-region: ${{ secrets.AWS_REGION }}
 
       - name: Copy script
         run: cp ./scripts/*.sh ./deploy
