🩵 chore : yml 값 디코딩해서 주입하는 방식으로 변경

--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -27,7 +27,7 @@ jobs:
           OCCUPY_YML: ${{ secrets.OCCUPY_YML }}
           OCCUPY_YML_DIR: ./BE/src/main/resources
           OCCUPY_YML_DIR_FILE_NAME: application.yml
-        run: echo $OCCUPY_YML > $OCCUPY_YML_DIR/$OCCUPY_YML_DIR_FILE_NAME
+        run: echo $OCCUPY_YML | base64 --decode > $OCCUPY_YML_DIR/$OCCUPY_YML_DIR_FILE_NAME
       
       - name: Grant execute permission for gradlew
         run: chmod +x ./BE/gradlew
