--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -27,6 +27,9 @@ repositories {
 }
 
 dependencies {
+    // redisson
+    implementation 'org.redisson:redisson-spring-boot-starter:3.18.0'
+
     // AWS
     implementation 'io.awspring.cloud:spring-cloud-aws-s3:3.0.2'
 
