--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -44,6 +44,11 @@ dependencies {
     // Redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
+    // hibernate-spatial
+    implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '6.4.1.Final'
+    implementation 'org.hibernate:hibernate-spatial'
+    implementation 'com.querydsl:querydsl-spatial'
+
     // JWT
     implementation 'io.jsonwebtoken:jjwt-api:0.11.2'
     implementation 'io.jsonwebtoken:jjwt-impl:0.11.2'
