--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -22,12 +22,19 @@ jobs:
           distribution: 'zulu'
 
       
-      - name: Copy Test
+      - name: Copy YML
         env:
           OCCUPY_YML: ${{ secrets.OCCUPY_YML }}
           OCCUPY_YML_DIR: ./BE/src/main/resources
           OCCUPY_YML_DIR_FILE_NAME: application.yml
         run: echo $OCCUPY_YML | base64 --decode > $OCCUPY_YML_DIR/$OCCUPY_YML_DIR_FILE_NAME
+
+      - name: Copy FB JSON
+        env:
+          OCCUPY_FB: ${{ secrets.OCCUPY_FB }}
+          OCCUPY_FB_DIR: ./BE/src/main/resources
+          OCCUPY_FB_DIR_FILE_NAME: fbServiceAccountKey.json
+        run: echo $OCCUPY_FB | base64 --decode > $OCCUPY_FB_DIR/$OCCUPY_FB_DIR_FILE_NAME
       
       - name: Grant execute permission for gradlew
         run: chmod +x ./BE/gradlew
