--- a/AOS/app/src/main/AndroidManifest.xml
+++ b/AOS/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
         tools:targetApi="31">
         <meta-data
             android:name="com.naver.maps.map.CLIENT_ID"
-            android:value="v6njsr8szj" />
+            android:value= "${CLIENT_ID}" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
