--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -4,6 +4,9 @@ plugins {
     id 'io.spring.dependency-management' version '1.1.4'
 }
 
+compileJava.options.encoding = 'UTF-8'
+compileTestJava.options.encoding = 'UTF-8'
+
 // PLAIN.jar 파일 생성 안함
 jar {
     enabled = false
@@ -61,6 +64,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok'
     annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
     annotationProcessor 'org.projectlombok:lombok'
+    testImplementation 'com.h2database:h2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 
     // QueryDsl
