--- a/BE/build.gradle
+++ b/BE/build.gradle
@@ -30,6 +30,9 @@ repositories {
 }
 
 dependencies {
+    // sentry
+    implementation 'io.sentry:sentry-spring-boot-starter-jakarta:7.3.0'
+    implementation 'io.sentry:sentry-logback:7.3.0'
 
     //s3
     implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
