--- a/.github/workflows/CD.yml
+++ b/.github/workflows/CD.yml
@@ -43,7 +43,7 @@ jobs:
         run: ls -lR
       
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew clean build --exclude-task test
         working-directory: ./BE/
 
       - name: Make zip file
