--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -29,7 +29,7 @@ jobs:
         run: chmod +x ./BE/gradlew
       
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew clean build --exclude-task test
         working-directory: ./BE/
 
       - name: Check current working directory
